# chessenv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.manylinux_aarch64  Dockerfile.manylinux_x86_64  MANIFEST.in  README.md  benchmark.py  build.py  build.sh  build_for_pypi.sh  build_lib.sh  build_wheels.sh  chessenv.c  chessenv.h  copy_libs.py  docker_build.sh  docker_build_wheels.sh  install.sh  main.py  pyproject.toml  setup.py
chessenv/: __init__.py  env.py  libloader.py  rep.py  sfa.py
fastchessenv/: env.py  libloader.py  sfa.py
src/: chessenv.c  chessenv.h  move_map.c  move_map.h  rep.c  rep.h  sfarray.c  sfarray.h
test/: #test_sfa.py#  find_ep_array_idx.py  gen_parallel_test.py  test_board.py  test_data.csv  test_env.py  test_invert.py  test_rep.py  test_sfa.py
